--- a/mywebsite/base/templates/base/home.html
+++ b/mywebsite/base/templates/base/home.html
@@ -40,8 +40,9 @@
 						
 						<li><img class="social" src="{% static 'images/linkedin.png' %}"></li>
 						<li><img class="social" src="{% static 'images/twitter.png' %}"></li>
-                        <li><img class="social" src="{% static 'images/gmail1.png' %}"></li>
-						
+                        <li><img class="social" src="{% static 'images/gmail.png' %}"></li>
+						git status
+
 					</ul>
 
 				</div>
