--- a/mywebsite/staticfiles/css/main.css
+++ b/mywebsite/staticfiles/css/main.css
@@ -1,31 +1,41 @@
-body{
-	background-color:#F8F8F8!important;
+body {
+    background-color: #F8F8F8 !important;
 }
 
-#profile-wrapper{
-	text-align: center;
+#profile-wrapper {
+    text-align: center;
 }
 
-#profile-pic{
-	width:150px;
-	height: 150px;
-	border-radius: 50%;
-	margin-left: auto;
-  	margin-right: auto;
+#profile-pic {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-ul{
-	padding: 0;
+ul {
+    padding: 0;
     list-style-type: none;
+    text-align: center;
 }
 
-
-.social-links ul, li{
-	list-style-type:none;
-	display: inline-block;
+.social-links ul {
+    padding: 0;
+    margin: 0;
 }
 
-.social{
-	width:20px;
-	height: 20px;
+.social-links li {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.social {
+    width: 24px;
+    height: 24px;
+    transition: transform 0.2s;
+}
+
+.social:hover {
+    transform: scale(1.2);
 }
